--- a/youth.html
+++ b/youth.html
@@ -14,7 +14,9 @@
         <a href="youth.html">Youth</a>
         <a href="kids.html">M.I.N.E KIDS</a>
     </div>
-    <h1>Hello youth</h1>
+    <video width="max" height="500" autoplay>
+        <!--find and add video here-->
+    </video>
 
 <script src="script.js"></script>
 </body>
